<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".OpretModer"
    tools:layout_editor_absoluteY="25dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewOpretModerOverskrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_navn"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextOpretModerModenavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mode_navn"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="55dp" />

    <EditText
        android:id="@+id/editTextOpretModerModeformal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mode_formal"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/editTextOpretModerDato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="207dp" />

    <EditText
        android:id="@+id/editTextOpretModerTidspunkt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="261dp" />

    <EditText
        android:id="@+id/editTextOpretModerSted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sted"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="333dp" />

    <EditText
        android:id="@+id/editTextOpretModerDagsorden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dagsorden"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="385dp" />

</android.support.constraint.ConstraintLayout>