<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.spinoff.apps.feedback_app.aktiviteter.beforeGivFeedback_akt">

    <TextView
        android:id="@+id/navnTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="Mødenavn"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorMEGETLysGrå"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navnTV"
        app:layout_constraintVertical_bias="0.222">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/formål_underline"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/formål"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="Møde formål"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/mødested_underline"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stedTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="mødested"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/dato_underline"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/datoTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/dato"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/Mødetid_underline"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tidStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/starttid"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/streg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tidSlut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/sluttid"
                android:textAlignment="viewStart"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <com.romainpiel.shimmer.ShimmerButton
        android:id="@+id/buttonStartFeed"
        style="@style/Knap.Grøn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.08"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        android:autofillHints="DBDBDB"
        android:fontFamily="@font/open_sans_semibold"
        android:text="Start Feedback"
        android:textColor="#FBF7FF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:reflectionColor="@color/shimmerFarveGrøn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>