<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    tools:context=".aktiviteter.OpretBruger_akt">

    <Button
        android:id="@+id/opretmoede_opret_btn"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="DBDBDB"
        android:background="@drawable/knap_groen"
        android:fontFamily="sans-serif"
        android:text="@string/opret_Mode"
        android:textColor="#FBF7FF"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/opretmoede_anuller_btn"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:background="#828282"
        android:text="@string/annuller"
        android:textColor="#FBF7FF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opretmoede_txtView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/opret_Mode"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/opretmoede_txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Indtast møde oplysninger"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <ScrollView
        android:layout_width="322dp"
        android:layout_height="307dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/opretmoede_navn_editTxt"
                android:layout_width="303dp"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:autofillHints="DBDBDB"
                android:background="#DBDBDB"
                android:clickable="false"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:hint="@string/mode_navn"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <EditText
                android:id="@+id/opretmoede_formaal_editTxt"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:autofillHints="DBDBDB"
                android:background="#DBDBDB"
                android:clickable="false"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:hint="@string/mode_formal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <TextView
                android:id="@+id/opretmoeder_dato_txt"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:autofillHints="DBDBDB"
                android:background="#DBDBDB"
                android:clickable="true"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/dato"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <TextView
                android:id="@+id/opretmoeder_tid_txt"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:background="#DBDBDB"
                android:clickable="true"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/tid"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <EditText
                android:id="@+id/opretmoeder_sted_editTxt"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:autofillHints="DBDBDB"
                android:background="#DBDBDB"
                android:clickable="false"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:hint="@string/sted"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

            <EditText
                android:id="@+id/opretmoeder_dagsorden_editTxt"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:allowUndo="true"
                android:autofillHints="DBDBDB"
                android:background="#DBDBDB"
                android:clickable="false"
                android:ems="10"
                android:fadingEdge="horizontal|vertical"
                android:hint="@string/dagsorden"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.43" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>